@@ -2,6 +2,7 @@ pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
 
 dev (08/08/2012):
 	* new feature: support change buddy markname
+	* new feature: support change group markname
 
 master (08/04/2012):
 	* face full support
